@@ -1165,7 +1165,7 @@ float(01000010010100010110000101001000)
 = 52.345001
 .PP
 .TP 8
-flaotError(52.345)
+floatError(52.345)
 = 1.2207031e-6
 .PP
 .TP 8
